# pagebox

./: .gitignore  AGENTS.md  BENCH_HARNESS_PLAN.md  CONCURRENCY_BUG.md  Cargo.toml  LICENSE.md  RAII_FRAME_DESIGN.md  README.md  SWIP_OWNERSHIP_API_PROPOSAL.md
.github/workflows/: rust.yml
crates/betree/: Cargo.toml  README.md
crates/betree/benches/: microbetreebench.rs
crates/betree/src/: lib.rs  message.rs  metrics_stub.rs  page.rs  stats.rs  tree.rs
crates/betree/tests/: cow_betree.rs
crates/btree/: Cargo.toml  README.md
crates/btree/benches/: btree.rs  microbtreebench.rs  neworder_churn.rs  ycsb.rs
crates/btree/src/: btree.rs  lib.rs  metrics_stub.rs
crates/btree/src/btree/: node.rs  parent_edge.rs  split_child.rs  split_publish.rs  stats.rs
crates/frame-kernel/: Cargo.toml  README.md
crates/frame-kernel/src/: frame.rs  lib.rs  page_id.rs  tests.rs
crates/hybrid-latch/: Cargo.toml  README.md
crates/hybrid-latch/benches/: latchbench.rs
crates/hybrid-latch/src/: helpers.rs  latch.rs  lib.rs  lock.rs
crates/kvbench/: .gitignore  Cargo.toml  bench.sh  plot_results.py
crates/kvbench/specs/: cache_pressure_ycsb_a.toml  cache_pressure_ycsb_c.toml  direct_io_cache_pressure_ycsb_a.toml  direct_io_cache_pressure_ycsb_c.toml  fillrandom.toml  overwrite.toml  p0.toml  p1.toml  resident_ycsb_a.toml  resident_ycsb_c_small.toml  ycsb_a_evicting.toml  ycsb_a_oversize.toml  ycsb_c_evicting.toml  ycsb_c_oversize.toml  ycsb_c_small.toml
crates/kvbench/src/: comparison.rs  distribution.rs  driver.rs  engine.rs  main.rs  report.rs  stats.rs  workload.rs
crates/kvbench/src/engines/: fjall.rs  kvstore_adapter.rs  lmdb.rs  mod.rs  redb.rs  rocksdb.rs  sled.rs
crates/kvstore/: Cargo.toml
crates/kvstore/src/: lib.rs  main.rs
crates/kvstore/tests/: page4_eviction_progress.rs
crates/storage/: Cargo.toml  README.md
crates/storage/benches/: microbufferpoolevictbench.rs  microbufferpoolfaultbench.rs  microfreepageallocatorbench.rs  microslottedpagebench.rs  microstableswipbench.rs  page_store.rs
crates/storage/src/: buffer_frame.rs  buffer_pool.rs  free_page_allocator.rs  lib.rs  metrics_stub.rs  page_header.rs  page_provider.rs  page_store.rs  slotted_page.rs
crates/storage/tests/: shuttle_pin_race.rs
crates/swip-kernel/: Cargo.toml  README.md
crates/swip-kernel/src/: atomic.rs  lib.rs  state.rs  tests.rs  word.rs
crates/threading/: Cargo.toml  README.md
crates/threading/src/: lib.rs
crates/wal/: Cargo.toml  README.md
crates/wal/benches/: microwalbench.rs  wal.rs
crates/wal/src/: aligned_buf.rs  backend.rs  format.rs  io.rs  io_uring.rs  lib.rs  metrics_stub.rs  tests.rs  wal_impl.rs
