[workspace]
members = [
    "crates/frame-kernel",
    "crates/swip-kernel",
    "crates/hybrid-latch",
    "crates/threading",
    "crates/wal",
    "crates/storage",
    "crates/btree",
    "crates/kvstore",
    "crates/kvbench",
]
default-members = [
    "crates/frame-kernel",
    "crates/swip-kernel",
    "crates/hybrid-latch",
    "crates/threading",
    "crates/wal",
    "crates/storage",
    "crates/btree",
    "crates/kvstore",
]
resolver = "3"

[workspace.package]
rust-version = "1.95"
license = "LGPL-3.0-or-later"

[workspace.dependencies]
# Substrate crates.
pagebox-frame-kernel = { path = "crates/frame-kernel" }
pagebox-swip-kernel = { path = "crates/swip-kernel" }
pagebox-hybrid-latch = { path = "crates/hybrid-latch" }
pagebox-threading = { path = "crates/threading" }
pagebox-wal = { path = "crates/wal" }
pagebox-storage = { path = "crates/storage" }
pagebox-btree = { path = "crates/btree" }

# External dependencies shared across substrate crates.
crc-fast = "1"
crossbeam-queue = "0.3"
fast-telemetry = "0.6"
libc = "0.2"
parking_lot = "0.12"

# Test, property-test, and benchmark dependencies.
clap = { version = "4.6", features = ["derive"] }
criterion = { version = "0.8", features = ["html_reports"] }
hdrhistogram = "7.5"
loom = "0.7"
micromeasure = "0.9"
paste = "1"
proptest = "1.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shuttle = "0.9"
tempfile = "3"
toml = "0.8"
