[package]
name = "pagebox-btree"
version = "0.1.0"
edition = "2024"
license.workspace = true

[features]
default = ["metrics"]
metrics = ["dep:fast-telemetry"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(loom)', 'cfg(miri)', 'cfg(metrics)'] }

[dependencies]
pagebox-hybrid-latch.workspace = true
pagebox-storage.workspace = true
pagebox-swip-kernel.workspace = true
fast-telemetry = { workspace = true, optional = true }
parking_lot.workspace = true

[dev-dependencies]
fast-telemetry.workspace = true
micromeasure.workspace = true
proptest.workspace = true
tempfile.workspace = true

[[bench]]
name = "btree"
harness = false

[[bench]]
name = "microbtreebench"
harness = false

[[bench]]
name = "ycsb"
harness = false

[[bench]]
name = "neworder_churn"
harness = false
