[package]
name = "kvbench"
version = "0.1.0"
edition = "2024"
license.workspace = true

[dependencies]
kvstore = { path = "../kvstore" }
clap.workspace = true
hdrhistogram.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
toml.workspace = true

[dev-dependencies]
tempfile.workspace = true

[features]
default = []
# Phase 1: external comparison engines (off by default).
fjall = ["dep:fjall"]
redb = ["dep:redb"]
sled = ["dep:sled"]

[dependencies.fjall]
version = "3"
optional = true
default-features = false

[dependencies.redb]
version = "4"
optional = true

[dependencies.sled]
version = "0.34"
optional = true

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(loom)', 'cfg(miri)', 'cfg(metrics)'] }
