[package]
name = "kvbench"
version = "0.1.0"
edition = "2024"
license.workspace = true

[dependencies]
kvstore = { path = "../kvstore" }
clap.workspace = true
hdrhistogram.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
toml.workspace = true

[dev-dependencies]
tempfile.workspace = true

[features]
default = []
# Phase 1: external comparison engines (off by default).
fjall = ["dep:fjall"]
redb = ["dep:redb"]
rocksdb = ["dep:rocksdb"]
lmdb = ["dep:lmdb-rkv"]

[dependencies.fjall]
version = "3"
optional = true
default-features = false
features = ["metrics"]

[dependencies.redb]
version = "4"
optional = true
features = ["cache_metrics"]

[dependencies.rocksdb]
version = "0.23"
optional = true
features = ["multi-threaded-cf"]

[dependencies.lmdb-rkv]
version = "0.14"
optional = true

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(loom)', 'cfg(miri)', 'cfg(metrics)'] }
