[package]
name = "kvstore"
version = "0.1.0"
edition = "2024"
license.workspace = true

[lib]
name = "kvstore"
path = "src/lib.rs"

[[bin]]
name = "kvstore"
path = "src/main.rs"

[dependencies]
pagebox-btree.workspace = true
pagebox-storage.workspace = true
pagebox-wal.workspace = true
pagebox-frame-kernel.workspace = true
clap.workspace = true

[features]
default = ["metrics"]
metrics = ["pagebox-storage/metrics", "pagebox-wal/metrics", "pagebox-btree/metrics"]
page-4k = [
    "pagebox-frame-kernel/page-4k",
    "pagebox-wal/page-4k",
    "pagebox-storage/page-4k",
    "pagebox-btree/page-4k",
]

[dev-dependencies]
tempfile.workspace = true
